Closed Bug 1458993 Opened 7 years ago Closed 7 years ago

layout.display-list.show-rebuild-area does not work with WebRender

Categories

(Core :: Graphics: WebRender, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: mstange, Assigned: mattwoodrow)

References

Details

Attachments

(1 file)

If you go to about:config and add a boolean pref with the name layout.display-list.show-rebuild-area and set it to true, and then go to http://news.ycombinator.com/ and hover over the comments links, you should only see blue boxes over those links and not over the entire page. With WebRender on, the entire page stays blue. Note that when you're on Mac, you have to disable overlay scrollbars in the system preferences, otherwise you won't get retained display lists.
Blocks: stage-wr-next
No longer blocks: stage-wr-trains
Just debugged this, it's because nsDisplaySolidColor::CreateWebRenderCommands uses the paint rect instead of the bounds. Paint rect is just the display list building area with WR (and is the intersection of the item bounds, building rect and invalid rect with non-WR), so that's much bigger than needed. So we're just drawing the blue boxes much bigger than we're supposed to be, RDL seems to be working fine.
MozReview-Commit-ID: Gp5C4v8qJXI
Assignee: nobody → matt.woodrow
Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8e32d7856fd8 Use correct bounds for WR solid color. r=miko
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: