Bug 1458993 - Use correct bounds for WR solid color. r=miko

MozReview-Commit-ID: Gp5C4v8qJXI

Differential Revision: https://phabricator.services.mozilla.com/D12713